LPS-185103 Correct document type toolbar alignment

--- a/modules/apps/data-engine/data-engine-taglib/src/main/resources/META-INF/resources/data_layout_builder/css/components/_ddm_form_builder.scss
+++ b/modules/apps/data-engine/data-engine-taglib/src/main/resources/META-INF/resources/data_layout_builder/css/components/_ddm_form_builder.scss
@@ -1,4 +1,12 @@
+@import 'atlas-variables';
+
 .data-engine-form-builder {
+	margin-top: 110px;
+
+	@include media-breakpoint-up(lg) {
+		margin-top: 64px;
+	}
+
 	> .sheet {
 		margin-top: 0;
 		padding: 0;
